fixed header overlap when resizing window by adding margin-top: 75px;

--- a/styles/register.css
+++ b/styles/register.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     max-width: 400px;
     margin: 20px auto;
+    margin-top: 75px;
 }
 
 .login-box h2 {
